apps/media/lidarr/lidarr-middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lidarr-headers
  namespace: media
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "http"
