apps/media/lidarr/lidarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:3.1.0.4875-ls43 # {"$imagepolicy": "flux-system:lidarr"}
          ports:
            - containerPort: 8686
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: media
          persistentVolumeClaim:
            claimName: lidarr-media-data
        - name: downloads
          persistentVolumeClaim:
            claimName: media-downloads
