apps/media/lidarr/lidarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: lidarr
  ports:
    - name: http
      port: 8686
      targetPort: 8686
