apps/media/lidarr/lidarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lidarr.catacumbas69.com`)
      priority: 169
      kind: Rule
      services:
        - name: lidarr
          port: 8686
#      middlewares:
#        - name: lidarr-headers
